--- a/views/answer.erb
+++ b/views/answer.erb
@@ -1,3 +1,4 @@
 <h1>Here are your results:</h1>
-<p><strong>Your sentence(s):</strong><%= @object %></p>
-<p><strong>Word Count:</strong><%= @answer %></p>
+<p><strong>Your sentence(s):</strong> &nbsp; <%= @object %></p>
+<p><strong>Word Count:</strong> &nbsp; <%= @answer %></p>
+<a href="/">Count another word!<a>
