--- a/views/answer.erb
+++ b/views/answer.erb
@@ -1,4 +1,7 @@
 <h1>Here are your results:</h1>
 <p><strong>Your sentence(s):</strong> &nbsp; <%= @object %></p>
-<p><strong>Word Count:</strong> &nbsp; <%= @answer %></p>
-<a href="/">Count another word!<a>
+<p><strong>Your word:</strong> &nbsp; <%= @word %></p>
+<p><strong>Word count:</strong> &nbsp; <%= @answer %></p>
+<div class="center">
+  <a href="/">COUNT ANOTHER WORD!<a>
+</div>
