--- a/views/index.erb
+++ b/views/index.erb
@@ -8,5 +8,5 @@
     <label for="argument">Word to be counted:</label>
     <input id="argument" name="argument" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn">Count that word!</button>
+  <button type="submit" class="btn">COUNT THAT WORD!</button>
 </form>
