--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="author" content="Alex Kaufman">
+    <meta name="keywords" content="Epicodus, Alex, Kaufman, word, count, counter"
     <title>| Word Counter |</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link rel='stylesheet' href='/css/styles.css' type='text/css'
